fixed some weird overlap on smaller windows or zoomed in

--- a/css/menu.css
+++ b/css/menu.css
@@ -31,10 +31,14 @@ button:focus {
     outline-width: thin !important;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 .row {
-    margin-top: 6%;
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-top: 1%;
+    margin-right: 0%;
+    margin-left: 0%;
 }
 
 .btn-group {
@@ -47,17 +51,11 @@ button:focus {
 }
 
 .title {
-    position: absolute;
-    top: 2%;
-    left: 7%;
     font-size: 2.5em;
 }
 
-.menu {
+.menu-juno {
 	line-height: 1;
-    position: absolute;
-    right: 5%;
-    top: 0;
     margin: 0.25em;
 }
 
@@ -103,13 +101,13 @@ a:hover {
 }
 
 /* Juno */
-.menu--juno .menu__item {
+.menu-juno .menu__item {
 	position: relative;
 	overflow: hidden;
 	margin: 0.5em;
 }
 
-.menu--juno .menu__link {
+.menu-juno .menu__link {
 	position: relative;
 	z-index: 10;
 	text-align: center;
@@ -118,21 +116,20 @@ a:hover {
 	transition: color 0.3s;
 }
 
-.menu--juno .menu__link:hover,
-.menu--juno .menu__link:focus {
+.menu-juno .menu__link:hover,
+.menu-juno .menu__link:focus {
 	color: #72b185;
     text-decoration: none;
 }
-
-.menu--juno .menu__item--current .menu__link {
+.menu-juno .menu__item-current .menu__link {
 	color: white;
     background-color: rgba(182, 210, 124, 0.2);
 }
 
-.menu--juno .menu__item::before,
-.menu--juno .menu__item::after,
-.menu--juno .menu__link::before,
-.menu--juno .menu__link::after {
+.menu-juno .menu__item::before,
+.menu-juno .menu__item::after,
+.menu-juno .menu__link::before,
+.menu-juno .menu__link::after {
 	content: '';
 	position: absolute;
 	pointer-events: none;
@@ -145,49 +142,49 @@ a:hover {
 }
 
 /* top and bottom line */
-.menu--juno .menu__item::before,
-.menu--juno .menu__item::after {
+.menu-juno .menu__item::before,
+.menu-juno .menu__item::after {
 	left: 0;
 	width: 100%;
 	height: 2px;
 }
 
-.menu--juno .menu__item::before {
+.menu-juno .menu__item::before {
 	top: 0;
 	-webkit-transform: translate3d(0, 15px, 0);
 	transform: translate3d(0, 15px, 0);
 }
 
-.menu--juno .menu__item::after {
+.menu-juno .menu__item::after {
 	bottom: 0;
 	-webkit-transform: translate3d(0, -15px, 0);
 	transform: translate3d(0, -15px, 0);
 }
 
 /* left and right line */
-.menu--juno .menu__link::before,
-.menu--juno .menu__link::after {
+.menu-juno .menu__link::before,
+.menu-juno .menu__link::after {
 	top: 0;
 	width: 2px;
 	height: 100%;
 }
 
-.menu--juno .menu__link::before {
+.menu-juno .menu__link::before {
 	left: 0;
 	-webkit-transform: translate3d(15px, 0, 0);
 	transform: translate3d(15px, 0, 0);
 }
 
-.menu--juno .menu__link::after {
+.menu-juno .menu__link::after {
 	right: 0;
 	-webkit-transform: translate3d(-15px, 0, 0);
 	transform: translate3d(-15px, 0, 0);
 }
 
-.menu--juno .menu__item--current::before,
-.menu--juno .menu__item--current::after,
-.menu--juno .menu__item--current .menu__link::before,
-.menu--juno .menu__item--current .menu__link::after {
+.menu-juno .menu__item-current::before,
+.menu-juno .menu__item-current::after,
+.menu-juno .menu__item-current .menu__link::before,
+.menu-juno .menu__item-current .menu__link::after {
 	opacity: 1;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
